test/e2e/features/route_delegation/testdata/matcher_inheritance.yaml
# Configuration:
#
# Parent infra/parent1 (parent1.com):
#   - Delegate /anything/foo to team1 namespace
#
# Parent infra/parent2 (parent2.com):
#   - Delegate /anything/baz to team1 namespace
#
# Child team1/svc1:
#   - Route /child to team1/svc1
#   - Uses matcher inheritance so it will effectively route /anything/foo/child to team1/svc1
#     and /anything/baz/child to team1/svc1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: parent1
  namespace: infra
spec:
  parentRefs:
  - name: gateway
    namespace: kgateway-base
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /anything/foo
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: team1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: parent2
  namespace: infra
spec:
  parentRefs:
  - name: gateway
    namespace: kgateway-base
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /anything/baz
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: team1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc1
  namespace: team1
  annotations:
    delegation.kgateway.dev/inherit-parent-matcher: "true"
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /child
    backendRefs:
    - name: svc1
      port: 8000
---
