test/e2e/features/route_delegation/testdata/multiple_parents.yaml
# Configuration:
#
# Parent infra/parent1 (parent1.com):
#   - Delegate /anything/team1 to team1 namespace
#   - Delegate /anything/team2 to team2 namespace
#
# Parent infra/parent2 (parent2.com):
#   - Delegate /anything/team1 to team1 namespace
#   - Delegate /anything/team2 to team2 namespace
#
# Child team1/svc1:
#   - Route /anything/team1/foo to team1/svc1
#   - No parentRefs
#
# Child team2/svc2:
#   - Route /anything/team2/foo to team2/svc2
#   - Parent infra/parent1: request to parent2.com/anything/team2/foo should fail!
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: parent1
  namespace: infra
spec:
  parentRefs:
  - name: gateway
    namespace: kgateway-base
  hostnames:
  - "parent1.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /anything/team1
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: team1
  - matches:
    - path:
        type: PathPrefix
        value: /anything/team2
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: team2
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: parent2
  namespace: infra
spec:
  parentRefs:
  - name: gateway
    namespace: kgateway-base
  hostnames:
  - "parent2.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /anything/team1
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: team1
  - matches:
    - path:
        type: PathPrefix
        value: /anything/team2
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: team2
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc1
  namespace: team1
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /anything/team1/foo
    backendRefs:
    - name: svc1
      port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc2
  namespace: team2
spec:
  parentRefs:
  - name: parent1
    namespace: infra
    group: gateway.networking.k8s.io
    kind: HTTPRoute
  rules:
  - matches:
    - path:
        type: Exact
        value: /anything/team2/foo
    backendRefs:
    - name: svc2
      port: 8000
---
