test/e2e/features/route_delegation/testdata/route_weight.yaml
# Expectation:
# Traffic to path with prefix /anything should always be routed to svc1 since it has a higher weight
# than the more specific /anything/team2 path (implicitly 0 weight).
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: root
  namespace: infra
spec:
  parentRefs:
  - name: gateway
    namespace: kgateway-base
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: delegation.kgateway.dev
      kind: label
      name: child
      namespace: all
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc1
  namespace: team1
  annotations:
    kgateway.dev/route-weight: "1"
  labels:
    delegation.kgateway.dev/label: child
spec:
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /anything
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: origin
          value: svc1
    backendRefs:
    - name: svc1
      port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc2
  namespace: team2
  labels:
    delegation.kgateway.dev/label: child
spec:
  parentRefs:
  - name: root
    namespace: infra
    group: gateway.networking.k8s.io
    kind: HTTPRoute
  rules:
  - matches:
    - path:
        type: Exact
        value: /anything/team2
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: origin
          value: svc2
    backendRefs:
    - name: svc2
      port: 8000
---
