test/e2e/features/route_delegation/testdata/unresolved_child.yaml
# Configuration:
#
# Parent infra/root:
#   - Delegate /anything/team1 to team1 namespace
#     Unresolved reference
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: root
  namespace: infra
spec:
  parentRefs:
  - name: gateway
    namespace: kgateway-base
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /anything/team1
    backendRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: "*"
      namespace: team1
---
